ChangeLog for varconf

Friday, March 19 2002, Martin Pollard

	* Fixed one of variable.cpp's operator<<'s  doesn't
	  seem to be in use right now anyway.
	
Friday, March 08 2002, James Turner

	* Added varconf-config and varconf.m4, plus configure
	  changes.
	* Bumped the version up
	* Set the .so version correctly, thanks to WFMath /
	  Ron Steinke for the help/
 	* Tweaked makefiles (using builddir when then they
	  should have been using srcdir) and .cpp files (using
	  < > includes when they should have been using "..").
	* make distcheck works cleanly.

Wednesday, Decemer 18, 2001 -- Al Riddoch <alriddoch@zepler.org>
  * C++ compliance fixes, for compiling under gcc v3.

Sunday, November 11, 2001 -- Ron Steinke <rsteinke@w-link.net>
  * variable.h, variable.cpp, dynbase.h: Added the capacity for
    Variable to hold an array of Variable (really vector<Variable>)
  * variable.h, variable.cpp: Added operator=(const char*),
    previously had both char* and std::string as constructors
    but only std::string as an assignment operator

Wednesday, November 7, 2001 -- Ron Steinke <rsteinke@w-link.net>
  * dynvar.h: Forgot the "inline" keyword. Oops.

Wednesday, November 7, 2001 -- Ron Steinke <rsteinke@w-link.net>
  * Changed the Variable class to a smart pointer to its old implementation,
    essentially %s/Variable/VarBase/g, then wrote a new Variable class
    based on SigC::Handle with the Variable API added.
  + added dynbase.h, dynbase.cpp, dyntypes.h, dyntypes.cpp,
    dyncmp.h, dyncmp.cpp, dynvar.h; these provide derived types
    of VarBase which dynamically depend on the configuration
    variables in Config::inst(), the user interface (for most
    purposes) consists of the functions in dynvar.h which
    deal only with class Variable
  + added doc/.cvsignore, doc/old/.cvsignore to ignore Makefile, Makefile.in
  * modified tests/.cvsignore to ignore .libs directory
  * modified varconf/.cvsignore to ignore new .lo objects